MODELINKS-72: test optimization